<resources>
    <string name="app_name">Cabin</string>
    <string name="cabin_logo">Cabin_logo</string>

    <string name="root_info">DAHA FAZLA BİLGİ İÇİN</string>
    <string name="slogan">Sınırsızca denemek için.</string>
    <string name="e_mail_hint">E-POSTA</string>
    <string name="password_hint">ŞİFRE</string>
    <string name="password_confirmation_hint">ŞİFRE TEKRAR</string>
    <string name="forget_password">Şifremi unuttum</string>
    <string name="title_activity_cabin_customer_root">cabinCustomerRoot</string>
    <string name="action_settings">Settings</string>
    <string name="default_error_message">Bir hata oluştu.</string>
    <string name="agreement_confirmation_button">OKUDUM VE ONAYLIYORUM</string>
    <string name="login_with">ile bağlan</string>
    <string name="not_registered_question">Üye değil misin?</string>
    <string name="registered_question">Üye misin?</string>

    <string name="forgetpassword_text">E-posta adresinizi girin.</string>
    <string name="back_to_root_button">GİRİŞ SAYFASINA DÖN</string>

    <string name="emailconfirmation_text">Hesabınız başarıyla oluşturulmuştu. E-postanızı onayladıktan sonra hesabınıza
        giriş yapabilirsiniz.
    </string>

    <string name="user_agreement">U-Nets (as NNs in general) need to have a fixed input dimension, and then,
        in order to achieve the central part and output mask dimension, a determined
        number of poolings and upsamplings are required. As the native dimensions
        of the photos vary, they are resized (normally downscaled) to meet the input
        size requirements of the U-Net.
        In order to accommodate different input dimensions, several U-Net models
        are required. Architecturally there are no major differences between them, but
        the number of levels that they have is established with regard to its input shape.
        For example, a U-Net with an input size of (256 × 256) will need five levels (five
        levels for the encoder part, one for the central and five levels for the decoder
        part) and one with (512 × 512) will need six.
        Also, in our U-Net, the number of filters on the central part of the network
        is constant (1024) independently of the input size. This means that every model
        will start and finish with a different number of filters. Referring back to the
        same examples as before, the initial and final number of filters for the U-Net
        with 256 as input size is 32, and for the 512 one is 16.
        This Chapter contains all the information related to the testing done during this
        project. This introduction will explain briefly the implementation methodology
        of our NN. Additionally, it also contains the reasons why we selected the used
        dataset and its description.
        The network was developed using Keras (see Subsection 3.1.4) as the main
        core, supported by Tensorflow (see Subsection 3.1.3), CUDA (see Subsection
        3.1.1) and cuDNN (see Subsection3.1.2). The first steps of the training were
        done on the development system, but the main body of the experiments was
        performed on the DTIC’s Asimov server, with its characteristics listed in Sub-
        section 3.3.
        The main dataset used to perform the training and experiments is Unite the
        People [19] UPi-S1h variation, with more than 10.2k images after preprocessing
        (see Section 4.2) it to fit the desired form that will enable us to train the network.
        This database was selected because it is specifically oriented to human segmen-
        tation and contains different environments, occlusion and lighting situations.
        During all the experimentation, the dataset was randomly divided in two sets,
        one for training and one for validation, representing the 90% and 10% (9256 and
        1029) of the original dataset, respectively. All the training process was done us-
        ing the bce_dice_loss as the loss function (see Section 4.6). Additionally, we also
        recorded a test sequence to test the proposed approach with our own data.
    </string>

    <string name="persons_height">Boyunuz</string>
    <string name="shoulders">Omuz</string>
    <string name="breast">Göğüs</string>
    <string name="waist">Bel</string>
    <string name="hip">Kalça</string>
    <string name="thigh">But</string>
    <string name="lowerleg">Alt Bacak</string>
    <string name="leg_height">İç Bacak Boyu</string>
    <string name="centimeters_abbreviation">cm</string>













    <string name="register_email_permit_text">Kampanyalardan haberdar olmak için elektronik
        ileti almak istiyorum.</string>

    <string name="register_accept_agreement_text">Üye olarak Üyelik Koşulları\'nı ve Kişisel Verilerin
        Korunması Metni\'ni kabul ediyorum.</string>

    <!-- NAVBAR -->
    <string name="homepage_label">Anasayfa</string>
    <string name="cart_label">Sepetim</string>
    <string name="favorites_label">Favorilerim</string>
    <string name="order_label">Siparişlerim</string>
    <string name="discover_label">Keşfet</string>
    <!---->

    <!-- Static Labels -->
    <string name="item_code_label">Ürün Kodu</string>
    <string name="cargo_tracking_number_label">Kargo Takip Numarası</string>
    <string name="cargo_price_label">Kargo Ücreti</string>
    <string name="total_price_label">Toplam Ücret</string>
    <string name="delivery_date_label">Teslim Tarihi</string>
    <string name="order_id_label">Sipariş Numarası</string>
    <string name="email_label">E-mail</string>
    <string name="sms_label">SMS</string>
    <string name="phone_call_label">Telefon Görüşmesi</string>
    <string name="name_label">Ad</string>
    <string name="surname_label">Soyad</string>
    <string name="birthday_label">Doğum Tarihi</string>
    <string name="phone_label">Cep Telefonu</string>
    <string name="sex_label">Cinsiyet</string>
    <string name="province_label">İl</string>
    <string name="district_label">İlçe</string>
    <string name="address_label">Adres</string>
    <string name="address_header_label">Adres Başlığı</string>
    <string name="corporation_name_label">Firma Adı</string>
    <string name="tax_number_label">Vergi Numarası</string>
    <string name="tax_administration_label">Vergi Dairesi</string>
    <string name="cargo_date_label">Kargoya Veriliş</string>
    <string name="finish_trade_label">Alışverişi Tamamla</string>
    <string name="middle_sum_label">Ara Toplam</string>
    <string name="cargo_sum_label">Kargo Toplam</string>
    <string name="free_shipment_label">Ücretsiz Kargo</string>
    <string name="product_explanation_label">Ürün Açıklaması</string>
    <string name="add_to_cart_label">Sepete Ekle</string>
    <string name="pay_at_the_door_label">Kapıda Ödeme</string>
    <!---->

    <!-- translations -->
    <string name="sign_in">GİRİŞ</string>
    <string name="sign_up">KAYDOL</string>
    <string name="seller">Satıcı</string>
    <string name="confirm">Onayla</string>
    <string name="Man">Erkek</string>
    <string name="Woman">Kadın</string>
    <string name="order_detail">Sipariş Detayı</string>
    <string name="sort">Sırala</string>
    <string name="filter">Filtrele</string>
    <string name="size">Beden</string>
    <string name="color">Renk</string>
    <string name="sum_label">Toplam</string>
    <string name="update">Güncelle</string>
    <string name="save">Kaydet</string>
    <string name="continue_label">Devam</string>
    <string name="personal">Bireysel</string>
    <string name="corporate">Kurumsal</string>
    <string name="or">veya</string>
    <string name="register">Üye ol</string>
    <string name="category">Kategori</string>
    <string name="sex">Cinsiyet</string>
    <string name="brand">Marka</string>
    <string name="price">Fiyat</string>
    <string name="okay">Tamam</string>
    <string name="retry">Yeniden Dene</string>
    <string name="add">Ekle</string>
    <string name="error">Hata</string>
    <string name="clear">Temizle</string>
    <string name="extradition">İade</string>
    <string name="remaining_time">Kalan süre</string>
    <string name="extradition_procedure">İade Prosedürü</string>
    <string name="receiver_name">Alıcı İsmi</string>
    <string name="receiver_address">Alıcı Adresi</string>
    <string name="delivery_information">Teslimat Bilgileri</string>
    <string name="preliminary_information_form">Ön Bilgilendirme Formu</string>
    <string name="distance_sales_agreement">Mesafeli Satış Sözleşmesi</string>
    <string name="agreement_and_forms">Sözleşme ve Formlar</string>
    <string name="congratulations">Tebrikler</string>
    <string name="send">Gönder</string>
    <!---->

    <!--separators-->
    <string name="date_separator">/</string>
    <string name="address_separator">/</string>
    <string name="address_bar_separator">></string>
    <string name="separator_dots">:</string>
    <string name="separator_dash">-</string>
    <string name="open_parentheses">(</string>
    <string name="close_parentheses">)</string>
    <!--/separators-->

    <string name="default_success_message">İşlem başarı ile gerçekleştirildi.</string>
    <string name="product_added_to_cart">Ürün sepete eklendi.</string>
    <string name="a_problem_occurred">Bir hata oluştu.</string>
    <string name="login_required">Bu sayfayı görüntülemek için giriş yapmanız gerekmektedir.</string>
    <string name="no_internet">İnternet bağlantınızı kontrol edip yeniden deneyin.</string>
    <string name="use_same_as_invoice_address">Faturamı aynı adrese gönder.</string>

    <string name="plus_99">+99</string>
    <string name="failed_to_reset_filter">Filtre eski haline getirtilemedi!</string>

    <string name="pay_at_the_door_info">Kapıda nakit veya kredi/banka kartıyla ödeme. </string>

    <string name="sum_price">Tutar</string>

    <string name="accept_preliminary_information_form">Ön Bilgilendirme Formunu kabul ediyorum.</string>
    <string name="accept_distance_sales_agreement">Mesafeli Satış Sözleşmesini kabul ediyorum.</string>

    <string name="order_created">Siparişiniz başarıyla oluşturulmuştur.</string>
    <string name="order_tracking_informer_text">Siparişinizi \'SİPARİŞLERİM\' sayfasından takip edebilirsiniz.</string>

    <string name="forgot_password_helper_text">Şifre sıfırlama işlemi için mail adresinizi yazınız</string>

    <string name="order_activated_informer">
        Siparişiniz başarıyla tamamlanmıştır.\n\n
        Gönderim sürecini "Siparişlerim"\n
        sayfasından takip edebilirsiniz.
    </string>

</resources>
