<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/customer_forgetpassword">

    <ImageView
            android:layout_width="141dp"
            android:layout_height="159dp" app:srcCompat="@drawable/logo_icon_resized"
            android:id="@+id/forgetpassword_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1" android:contentDescription="@string/cabin_logo"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/forgetpassword_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/e_mail_hint" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgetpassword_text"
            app:layout_constraintVertical_bias="0.05" android:textSize="16sp" android:autofillHints=""/>
    <TextView
            android:text="@string/forgetpassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgetpassword_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgetpassword_logo" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.15"
            android:textColor="@android:color/black"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/forgetpassword_confirm_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgetpassword_email" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.05" app:layout_constraintHorizontal_bias="0.65"
            android:background="@drawable/cabin_default_text_background" android:alpha="0.5" android:clickable="false"
            android:enabled="false" android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>