<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/customer_register">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_password_input"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/password_hint" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/register_email_input" app:layout_constraintVertical_bias="0.05"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/register_continue_button" android:background="@drawable/more_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="40dp" android:alpha="0.5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_password_confirmation_input"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.85"
            android:clickable="false" android:enabled="false"/>
    <ImageView
            android:layout_width="141dp"
            android:layout_height="159dp" app:srcCompat="@drawable/logo_icon_resized"
            android:id="@+id/cabin_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="464dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/cabin_logo"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/slogan"
            android:layout_width="180dp"
            android:layout_height="40dp" android:id="@+id/slogan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:background="@drawable/cabin_default_text_background"
            android:gravity="center" android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.08"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/cabin_logo" app:layout_constraintHorizontal_bias="0.5"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/register_email_input"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/e_mail_hint"
            style="@style/Widget.AppCompat.AutoCompleteTextView" android:autofillHints="E-posta"
            app:layout_constraintTop_toBottomOf="@+id/slogan"
            android:layout_marginBottom="250dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_password_confirmation_input"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/password_confirmation_hint" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/register_password_input" app:layout_constraintVertical_bias="0.05"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="310dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_confirmation_input"
            app:layout_constraintBottom_toTopOf="@+id/register_continue_button">
        <ImageButton
                android:layout_width="150dp"
                android:layout_height="60dp" app:srcCompat="@drawable/man_icon_white"
                android:id="@+id/register_man_button"
                android:scaleType="fitCenter" android:background="@drawable/half_button_left" android:padding="10dp"
                android:contentDescription="Man button"/>
        <ImageButton
                android:layout_width="150dp"
                android:layout_height="60dp" app:srcCompat="@drawable/woman_icon_white"
                android:id="@+id/register_woman_button"
                android:scaleType="fitCenter" android:background="@drawable/half_button_right" android:padding="10dp"
                android:contentDescription="Woman button" android:layout_marginLeft="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>