<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/customer_root">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <LinearLayout android:id="@+id/LOGO"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent" app:layout_constraintVertical_bias="0.1">
            <ImageView
                    android:layout_width="141dp"
                    android:layout_height="159dp" app:srcCompat="@drawable/logo_icon_resized"
                    android:id="@+id/cabin_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/cabin_logo"
                    android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/MAIN_BUTTONS"
                      android:layout_width="fill_parent" android:layout_height="60dp"
                      android:orientation="horizontal"
                      android:gravity="center"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.55">
            <Button
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:id="@+id/sign_in_button"
                    android:background="@drawable/half_button_left"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="340dp"
                    android:layout_marginRight="8dp"/>
            <Button
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:id="@+id/sign_up_button"
                    android:background="@drawable/half_button_right"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="340dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/INPFO_LAYOUT"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintVertical_bias="0.95"
                      android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/root_info"
                    android:fontFamily="@font/century_gothic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textStyle="bold" android:textSize="14sp"
                    android:textColor="#4A224E" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/MAIN_BUTTONS" android:id="@+id/root_info"/>
            <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/info_button" android:background="@drawable/more_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/root_info" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>